--- a/index.html
+++ b/index.html
@@ -143,20 +143,20 @@
     gap: 8px;                  /* 設定元素之間的間距 */
   }
 
-  /* Ace English 黃字白框 (修改處) */
+  /* Ace English 黃字白框 (修改處：顏色更亮，白框變細) */
   .ace-style {
-      color: #ffd700; /* 金黃色 */
-      -webkit-text-stroke: 1.2px white; /* CSS文字描邊改為白色 */
-      text-stroke: 1.2px white; 
+      color: #ffeb3b; /* 改為更亮的鮮黃色 */
+      -webkit-text-stroke: 0.8px white; /* 白框變細 */
+      text-stroke: 0.8px white; 
       font-weight: 900;
       text-shadow: 2px 2px 0px rgba(0,0,0,0.8); /* 保留陰影增加對比 */
   }
 
-  /* 翊華教育 綠字白框 (修改處) */
+  /* 翊華教育 綠字白框 (修改處：顏色更鮮豔，白框變細) */
   .yihua-style {
-      color: #2ecc71; /* 鮮綠色 */
-      -webkit-text-stroke: 1.2px white; /* CSS文字描邊改為白色 */
-      text-stroke: 1.2px white;
+      color: #32cd32; /* 改為更鮮豔的萊姆綠 */
+      -webkit-text-stroke: 0.8px white; /* 白框變細 */
+      text-stroke: 0.8px white;
       font-weight: 900;
       text-shadow: 2px 2px 0px rgba(0,0,0,0.8); /* 保留陰影增加對比 */
   }
@@ -171,8 +171,8 @@
     .victory-text { font-size: 2.5rem; }
     #progress-container { top: 80px; }
     #footer { font-size: 1.5rem; padding: 15px; }
-    /* 電腦版描邊也改為白色 (修改處) */
-    .ace-style, .yihua-style { -webkit-text-stroke: 1.5px white; text-stroke: 1.5px white; }
+    /* 電腦版描邊也變細 (修改處) */
+    .ace-style, .yihua-style { -webkit-text-stroke: 1px white; text-stroke: 1px white; }
   }
 </style>
 </head>
