--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@
     gap: 8px;                  /* 設定元素之間的間距 */
   }
 
-  /* Ace English 黃字白框 (修改處：顏色更亮，白框變細) */
+  /* Ace English 深黃字+白框 (修改處) */
   .ace-style {
-      color: #ffeb3b; /* 改為更亮的鮮黃色 */
-      -webkit-text-stroke: 0.8px white; /* 白框變細 */
+      color: #FFC107; /* 深黃色 (Amber) */
+      -webkit-text-stroke: 0.8px white; /* 細白框 */
       text-stroke: 0.8px white; 
       font-weight: 900;
       text-shadow: 2px 2px 0px rgba(0,0,0,0.8); /* 保留陰影增加對比 */
   }
 
-  /* 翊華教育 綠字白框 (修改處：顏色更鮮豔，白框變細) */
+  /* 翊華教育 深綠字+白框 (修改處) */
   .yihua-style {
-      color: #32cd32; /* 改為更鮮豔的萊姆綠 */
-      -webkit-text-stroke: 0.8px white; /* 白框變細 */
+      color: #2E7D32; /* 深綠色 */
+      -webkit-text-stroke: 0.8px white; /* 細白框 */
       text-stroke: 0.8px white;
       font-weight: 900;
       text-shadow: 2px 2px 0px rgba(0,0,0,0.8); /* 保留陰影增加對比 */
@@ -171,7 +171,7 @@
     .victory-text { font-size: 2.5rem; }
     #progress-container { top: 80px; }
     #footer { font-size: 1.5rem; padding: 15px; }
-    /* 電腦版描邊也變細 (修改處) */
+    /* 電腦版描邊調整 */
     .ace-style, .yihua-style { -webkit-text-stroke: 1px white; text-stroke: 1px white; }
   }
 </style>
