--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
     width: 100%;
     text-align: center;
     color: white;
-    /* 修改處：加大手機版字體，讓描邊看起來更細緻 */
     font-size: 7vmin; 
     font-weight: 900;  /* 超粗體 */
     padding: 2vmin;
@@ -144,20 +143,19 @@
     gap: 8px;                  
   }
 
-  /* Ace English 深黃字+白框 */
+  /* Ace English 深黃字+細白框 (修改處：白框變細) */
   .ace-style {
       color: #FFC107; /* 深黃色 */
-      -webkit-text-stroke: 0.8px white; 
-      text-stroke: 0.8px white; 
-      /* 移除文字陰影，讓白框更純粹乾淨 */
+      -webkit-text-stroke: 0.5px white; /* 白框變細 */
+      text-stroke: 0.5px white; 
       text-shadow: 3px 3px 0px rgba(0,0,0,0.5); 
   }
 
-  /* 翊華教育 深綠字+白框 */
+  /* 翊華教育 亮綠字+細白框 (修改處：顏色更亮，白框變細) */
   .yihua-style {
-      color: #2E7D32; /* 深綠色 */
-      -webkit-text-stroke: 0.8px white;
-      text-stroke: 0.8px white;
+      color: #00E676; /* 改為更亮的綠色 */
+      -webkit-text-stroke: 0.5px white; /* 白框變細 */
+      text-stroke: 0.5px white;
       text-shadow: 3px 3px 0px rgba(0,0,0,0.5);
   }
 
@@ -170,12 +168,10 @@
     #listen-hint { font-size: 5rem; }
     .victory-text { font-size: 2.5rem; }
     #progress-container { top: 80px; }
-    
-    /* 修改處：加大電腦版字體 */
     #footer { font-size: 2.5rem; padding: 20px; }
     
-    /* 因為字變大了，描邊稍微加一點點寬度也不會覺得粗，反而更清晰 */
-    .ace-style, .yihua-style { -webkit-text-stroke: 1.2px white; text-stroke: 1.2px white; }
+    /* 修改處：電腦版描邊也變細 */
+    .ace-style, .yihua-style { -webkit-text-stroke: 0.8px white; text-stroke: 0.8px white; }
   }
 </style>
 </head>
